fix some overflow behaviour

--- a/style/luminous.scss
+++ b/style/luminous.scss
@@ -74,7 +74,8 @@
     background: transparent none;
     font-size: inherit;
     font-family: inherit;
-    width: auto;    
+    width: auto;
+    overflow: auto;
   }
   
   /* line numbers */
